--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <h1 id="abouttitle">About Me</h1>
 <section class="aboutinfo">
     <div class="headshot">  
-    <img id="headshotpic" src="..//Portfolio/assets/Headshot.jpeg">
+    <img id="headshotpic" src="/Portfolio/assets/Headshot.jpeg">
     </div>
     <div class="aboutmeinfo">
     <p id="infotitle">  Hi, I am Drew Roberts. I am currently enrolled at Eleven Fifty Academy where I am learning C# and html.</p>
